<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.list.PhotoListFragment">

<!--    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/swipe_refresh"-->
<!--        >-->

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler_view"
            />

<!--    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/no_data_textview"
        android:textColor="#000"
        android:layout_gravity="center"
        android:text="@string/there_s_nothing_here"
        android:visibility="gone"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>