...
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/photo_image"
                android:padding="0dp"
                android:layout_margin="0dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                />

...
                android:padding="10dp"
                android:id="@+id/container1"
                >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/photo_title"
                    android:text="The Title of a Blog"
                    android:textColor="#000"
                    android:textSize="19sp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    />
...
